--- a/templates/group_comment.html
+++ b/templates/group_comment.html
@@ -8,7 +8,7 @@
     </div>
     <div class="media-body">
         <span class="media-heading">
-            <em class="hide"><abbr class="timeago pull-right" title="{{ comment.time_stamp }}">{{ comment.date_posted }}</abbr></em>
+            <em class="hide timestamp"><abbr class="timeago" title="{{ comment.time_stamp }}">{{ comment.date_posted }}</abbr></em>
             <abbr title="{{ comment.author.user.email }}">
                 <strong class="pull-left name">{{ comment.author.user.first_name }} {{ comment.author.user.last_name }}: </strong>
             </abbr>
