--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -7,7 +7,7 @@
 <div class="navbar">
     <div class="navbar-inner">
   	    <div class="container">
-            <a class="brand" href="#">Bulletin</a>
+            <a class="brand" href="/">Bulletin</a>
             <ul class="nav pull-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
