A little more tests

--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -21,7 +21,7 @@
         <div class="accordion well well-small" id="accordion">
             <div class="accordion-group">
                 <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                    <a class="accordion-toggle" data-toggle="collapse" id="Get started" data-parent="#accordion" href="#collapseOne">
                         <h3>Get started</h3>
                     </a>
                 </div>
@@ -40,7 +40,7 @@
             </div>
             <div class="accordion-group">
                 <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                    <a class="accordion-toggle" data-toggle="collapse" id="Log in" data-parent="#accordion" href="#collapseTwo">
                         <h4><i class="icon-signin"></i> Log In</h4>
                     </a>
                 </div>
