--- a/templates/404.html
+++ b/templates/404.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="clearfix">
-    <h2 class="form-signin-heading">404: You have reached an unreachable page</h2>
+    <h2 class="form-signin-heading">404: The page that you are trying to reach does not exist</h2>
 </div>
 {% endblock content %}
